force-app/main/default/objects/redwing__ESignature__c/redwing__ESignature__c.object-meta.xml
<CustomObject>
    <label>ESignature</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>ESignature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ESigantures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>