force-app/main/default/objects/redwing__ESignature__c/fields/redwing__Action_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Action_Date__c</fullName>
    <inlineHelpText>Date/Time stamp when signature was executed in the system.</inlineHelpText>
    <label>Action Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>