force-app/main/default/objects/redwing__ESignature__c/fields/redwing__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Action_Type__c</fullName>
    <inlineHelpText>Defines action the signature was executed for.</inlineHelpText>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Learning Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>