force-app/main/default/objects/redwing__ESignature__c/fields/redwing__Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Object_Api_Name__c</fullName>
    <inlineHelpText>Api Name of an object the Esignature record was created for.</inlineHelpText>
    <label>Object Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>