force-app/main/default/objects/redwing__ESignature__c/fields/redwing__Signature_Method__c.field-meta.xml
<CustomField>
    <fullName>redwing__Signature_Method__c</fullName>
    <inlineHelpText>Defines which method was used for signature.</inlineHelpText>
    <label>Signature Method</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>