force-app/main/default/objects/redwing__ESignature__c/fields/redwing__Signed_By__c.field-meta.xml
<CustomField>
    <fullName>redwing__Signed_By__c</fullName>
    <inlineHelpText>Full Name of signer.</inlineHelpText>
    <label>Signed By</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>