force-app/main/default/objects/redwing__ESignature__c/fields/redwing__Signed_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__Signed_Record_Id__c</fullName>
    <inlineHelpText>Record Id the Esignature was created for.</inlineHelpText>
    <label>Signed Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>